log.log
  File "/Users/anton/.openclaw/workspace-piedpiper/dashboard/app.py", line 126
    return f"ğŸ”§ {block.get('name', 'tool')}(â€¦"")
                                             ^
SyntaxError: unterminated string literal (detected at line 126)
